[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scenes/SnowBall.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scenes/SnowWall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Scenes/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Scenes/Enemy.tscn" type="PackedScene" id=5]

[node name="Main" type="Node" index="0"]

script = ExtResource( 1 )
Snowball = ExtResource( 2 )
Snowwall = ExtResource( 3 )

[node name="Player" parent="." index="0" instance=ExtResource( 4 )]

position = Vector2( 50.2939, 50.2939 )

[node name="Enemy" parent="." index="1" instance=ExtResource( 5 )]

[node name="PlayerStartPosition" type="Position2D" parent="." index="2"]

position = Vector2( 75, 300 )
_sections_unfolded = [ "Transform" ]

[node name="EnemyStartPosition" type="Position2D" parent="." index="3"]

position = Vector2( 950, 300 )
_sections_unfolded = [ "Transform" ]

[node name="AttackTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 0.75
one_shot = true
autostart = false

[node name="EnemyAttackTimer" type="Timer" parent="." index="5"]

process_mode = 1
wait_time = 0.75
one_shot = false
autostart = false

[node name="AllowsEnemyAttack" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = true

[node name="WallPlaceTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 4.0
one_shot = true
autostart = false

[node name="WallDestroyTimer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="SnowWall" parent="." index="9" instance=ExtResource( 3 )]

position = Vector2( 180.448, 168.145 )

[node name="SnowWall2" parent="." index="10" instance=ExtResource( 3 )]

position = Vector2( 178.397, 467.524 )

[node name="SnowWall3" parent="." index="11" instance=ExtResource( 3 )]

position = Vector2( 801.762, 147.639 )
is_player_wall = false

[node name="SnowWall4" parent="." index="12" instance=ExtResource( 3 )]

position = Vector2( 803.08, 457.23 )
is_player_wall = false

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]

[connection signal="timeout" from="EnemyAttackTimer" to="." method="_on_EnemyAttackTimer_timeout"]

[connection signal="timeout" from="AllowsEnemyAttack" to="." method="_on_AllowsEnemyAttack_timeout"]

[connection signal="timeout" from="WallPlaceTimer" to="." method="_on_WallPlaceTimer_timeout"]

[connection signal="timeout" from="WallDestroyTimer" to="." method="_on_WallDestroyTimer_timeout"]


